--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ social:
 
 # Site Verification Settings
 webmaster_verifications:
-  google: <meta name="google-site-verification" content="QTgF2z_N9nCcjif_2NcUojAiv8T8jBjsF6v1Oh_JU0Q" /># fill in your Google verification code
+  google: QTgF2z_N9nCcjif_2NcUojAiv8T8jBjsF6v1Oh_JU0Q
   bing: # fill in your Bing verification code
   alexa: # fill in your Alexa verification code
   yandex: # fill in your Yandex verification code
