--- a/_config.yml
+++ b/_config.yml
@@ -225,3 +225,14 @@ jekyll-archives:
   permalinks:
     tag: /tags/:name/
     category: /categories/:name/
+
+# 에디터 자동 열기
+# 글 생성 시 초기 설정
+jekyll_compose:
+  auto_open: true
+  default_front_matter:
+    posts:
+      description:
+      category:
+      tags:
+      published: false
