--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: "https://yang-seung-ho.github.io/"
+url: "https://yang-seung-ho.github.io"
 
 github:
   username: Yang-Seung-Ho # change to your GitHub username
