--- a/_config.yml
+++ b/_config.yml
@@ -152,7 +152,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "/yang-seung-ho"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
